2008-10-01  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay (avatar_command):
	allow "size", "height" and "width" with no parameters

	* avatarsay (avatar_command):
	new commands: wait, move in, move out

2008-09-30  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay (handle_audio_command):
	fix: stop audio before freeing it
	(menu): stop audio if it's still running

	* avatarsay (avatar_command):
	new commands: audioloop, stopaudio

2008-09-29  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (avatar_command): new function
	(iscommand): adapted
	avtterm.c (APC_sequence): use avatar_command
	avtcmd: new script

2008-09-27  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (get_data_file, iscommand):
	command datadir not allowed in scriptfiles anymore

	* avatarsay.c (create_file):
	adapted to new syntax

	* avatarsay.c (get_program_path): removed

2008-09-25  Andreas K. Foerster  <info@akfoerster.de>

	* arch.c (arch_get_data):
	add 4 bytes zero at the end of the buffer
	
2008-09-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (move_out, main):
	moved wait-loop

	* akfavatar.h, avatar.c (avt_credits, avt_credits_mb):
	new functions

	* avatarsay.c (handle_credits_command):
	new function
	(iscommand): adapted

	* avatar.c (avt_drawchar):
	new parameter: surface

2008-09-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (dont_edit_archive):
	new function

2008-09-22  Andreas K. Foerster  <info@akfoerster.de>

	* arch.h, arch.c: 
	new files - separated out of avatarsay.c
	avatarsay.c: adapted

2008-09-19  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (get_data_from_archive): new function 
	(get_image_from_archive, get_sound_from_archive): removed
	(handle_image_command, handle_avatarimage_command)
	(handle_audio_command): adapted

	* avatarsay (first_archive_member): new function
	(first_archive_entry): removed
	(open_script, multi_menu): adapted

2008-09-18  Andreas K. Foerster  <info@akfoerster.de>
